2016-06-03  Release Manager

	* GCC 5.4.0 released.

2016-05-26  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2016-04-24  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/70762
	* testsuite/util/testsuite_fs.h (__gnu_test::nonexistent_path): Use
	static counter to return a different path on every call.

	* testsuite/experimental/filesystem/path/native/string.cc: Add
	dg-require-filesystem-ts directive.

2016-05-25  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2016-04-20  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/69703
	* src/c++11/codecvt.cc (__codecvt_utf8_base<char16_t>::do_in,
	__codecvt_utf8_utf16_base<char16_t>::do_in): Fix mask operations.

	Backport from mainline
	2016-04-19  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/69703
	* src/c++11/codecvt.cc (__codecvt_utf8_base<char16_t>::do_in)):
	Override endianness bit in mode.
	* testsuite/22_locale/codecvt/codecvt_utf8/69703.cc: New test.
	* testsuite/22_locale/codecvt/codecvt_utf8_utf16/66855.cc: Test
	that little_endian mode is ignored.
	* testsuite/experimental/filesystem/path/native/string.cc: New test.

2016-05-25  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2016-05-10  Jonathan Wakely  <jwakely@redhat.com>

	* include/experimental/bits/fs_dir.h (begin, end): Add noexcept.
	* testsuite/experimental/filesystem/iterators/directory_iterator.cc:
	Test begin and end functions.
	* testsuite/experimental/filesystem/iterators/
	recursive_directory_iterator.cc: Likewise.

2016-05-25  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2016-05-10  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/71038
	* src/filesystem/ops.cc (do_copy_file): Fix backwards conditions.
	* testsuite/experimental/filesystem/operations/copy_file.cc: New test.

2016-05-25  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2016-05-10  Jonathan Wakely  <jwakely@redhat.com>
